plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.brickers'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}
// 실행 가능한 fat-jar는 만든다
bootJar {
    enabled = true
}

// 실행 불가능한 일반 jar(plain)는 만들지 않는다 (이게 핵심!)
jar {
    enabled = false
}
dependencies {
implementation 'me.paulschwarz:spring-dotenv:4.0.0'   
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // AWS S3 & SQS
    implementation platform('software.amazon.awssdk:bom:2.29.0')
    implementation "software.amazon.awssdk:s3"
    implementation "software.amazon.awssdk:sqs"
    implementation "software.amazon.awssdk:auth"
    implementation "software.amazon.awssdk:regions"

    
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    
    
    
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // Google Analytics 4 (GA4) Data API
    implementation 'com.google.analytics:google-analytics-data:0.56.0'
}


tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["-parameters"]
}

bootJar {
    archiveFileName = 'app.jar'
}
